Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-96276

_NET_STARTUP_ID not supported

    XMLWordPrintable

Details

    • Linux/X11
    • ba8c4b4ac6 (qt/qtbase/dev) ba8c4b4ac6 (qt/tqtc-qtbase/dev) 39a481f634 (qt/qtbase/6.3) 6f482054d7 (qt/qtbase/6.4) 39a481f634 (qt/tqtc-qtbase/6.3) 6f482054d7 (qt/tqtc-qtbase/6.4) 6f482054d7 (qt/tqtc-qtbase/6.4.0) 9649f401f6 (qt/tqtc-qtbase/6.2)

    Description

      Qt supports _NET_STARTUP_INFO from the X11 startup notification spec: https://specifications.freedesktop.org/startup-notification-spec/startup-notification-latest.txt

      However it doesn't set _NET_STARTUP_ID. This makes it difficult to link the startup ID to a window in the window manager.

      https://github.com/qt/qtbase/blob/9db7cc79a26ced4997277b5c206ca15949133240/src/plugins/platforms/xcb/qxcbatom.h#L152

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            ilya-fedin Ilya Fedin
            emersion . .
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes