src/plugins/platforms/xcb/qxcbatom.h
@@ -115,6 +115,7 @@ public:
 
         _NET_STARTUP_INFO,
         _NET_STARTUP_INFO_BEGIN,
+        _NET_STARTUP_ID,
 
         _NET_SUPPORTING_WM_CHECK,
 
